--- a/src/main/templates/base.html
+++ b/src/main/templates/base.html
@@ -38,6 +38,7 @@
                 <link href="/static/vendors/select2/dist/css/select2.css" rel="stylesheet">
                 <link href="/static/autocomplete_light/select2.css" rel="stylesheet">
                 <link href="/static/vendors/mjolnic-bootstrap-colorpicker/dist/css/bootstrap-colorpicker.css" rel="stylesheet">
+                <link href="/static/vendors/clockpicker/bootstrap-clockpicker.min.css" rel="stylesheet">
                 <link rel="shortcut icon" type="image/png" href="/static/img/logo_negro.png">
             {% endblock stylesheets %}
 
@@ -130,6 +131,7 @@
                 <script src="/static/autocomplete_light/autocomplete.init.js"></script>
                 <script src="/static/vendors/autocomplete_light/select2.init.js"></script>
                 <script src="/static/vendors/mjolnic-bootstrap-colorpicker/dist/js/bootstrap-colorpicker.js"></script>
+                <script src="/static/vendors/clockpicker/bootstrap-clockpicker.min.js"></script>
             {% endblock %}
             <!-- Custom Theme Scripts -->
             <script src="/static/build/js/custom.js"></script>
