--- a/src/main/templates/forms/form.html
+++ b/src/main/templates/forms/form.html
@@ -22,9 +22,18 @@
             {{ field }}
         {% elif field|field_type == 'RadioSelect' %}
             {{ field }}
+        {% elif field|field_type == 'Field' %}
+            {{ field }}
         {% else %}
             {% include "forms/charfield.html" with field=field %}
         {% endif %}
+            {% if field.errors %}
+                <ul class="parsley-errors-list" id="parsley-id-5">
+                    {% for error in field.errors %}
+                        <li class="parsley-required">{{ error }}</li>
+                    {% endfor %}
+                </ul>
+            {% endif %}
             <div class="feedback-message">
 
             </div>
