--- a/src/main/templates/forms/charfield.html
+++ b/src/main/templates/forms/charfield.html
@@ -1,9 +1,2 @@
 <input type="text" id="{{ field.id_for_label }}" required="required" name="{{ field.html_name }}"
-       {% if field.value %}value="{{ field.value }}"{% endif %} class="form-control col-md-7 col-xs-12">
-{% if field.errors %}
-    <ul class="parsley-errors-list" id="parsley-id-5">
-        {% for error in field.errors %}
-            <li class="parsley-required">{{ error }}</li>
-        {% endfor %}
-    </ul>
-{% endif %}
+       {% if field.value %}value="{{ field.value }}"{% endif %} class="form-control col-md-7 col-xs-12 {{ field.field.attrs }}">
