Agrupa modelos: Grupo y HoraDia

--- a/src/escuela/templates/clases.html
+++ b/src/escuela/templates/clases.html
@@ -31,9 +31,9 @@
 
                             <thead>
                             <tr>
-                                <th>nombre</th>
-                                <th>descripcion</th>
-                                <th>costo</th>
+                                <th>Nombre</th>
+                                <th>Descripcion</th>
+                                <th>Costo(Gs)</th>
                                 <th>Acción</th>
                             </tr>
                             </thead>
