--- a/src/escuela/templates/grupos.html
+++ b/src/escuela/templates/grupos.html
@@ -3,7 +3,7 @@
 
     <div class="page-title">
         <div class="title_left">
-            <h3>Lista de Clases</h3>
+            <h3>Lista de Grupos</h3>
         </div>
         <div class="title_right">
             <div class="col-md-5 col-sm-5 col-xs-12 pull-right top_search">
@@ -28,14 +28,22 @@
                         <table id="datatable-responsive" class="table table-striped table-bordered dt-responsive nowrap"
                                cellspacing="0"
                                width="100%">
-
                             <thead>
                             <tr>
+                                <th>Clase</th>
+                                <th>Profesor</th>
+                                <th>Cupo máximo</th>
+                                <th>Costo/mes</th>
+                                <th>Hora inicio</th>
+                                <th>Hora fin</th>
+{#                                <th>lunes</th>#}
+{#                                <th>martes</th>#}
+{#                                <th>miercoles</th>#}
+{#                                <th>jueves</th>#}
+{#                                <th>viernes</th>#}
+{#                                <th>sabado</th>#}
+{#                                <th>domingo</th>#}
 
-                                <th>id_clase</th>
-                                <th>id_profesor</th>
-                                <th>cupo_maximo</th>
-                                <th>costo</th>
                                 <th>Accion</th>
                             </tr>
                             </thead>
@@ -47,6 +55,15 @@
                                     <td>{{ grupo.id_profesor }}</td>
                                     <td>{{ grupo.cupo_maximo }}</td>
                                     <td>{{ grupo.costo }}</td>
+                                    <td>{{ grupo.hora_inicio }}</td>-<td>{{ grupo.hora_fin }}</td>
+{#                                    <td>{{ grupo.lunes }}</td>#}
+{#                                    <td>{{ grupo.martes }}</td>#}
+{#                                    <td>{{ grupo.miercoles }}</td>#}
+{#                                    <td>{{ grupo.jueves }}</td>#}
+{#                                    <td>{{ grupo.viernes }}</td>#}
+{#                                    <td>{{ grupo.sabado }}</td>#}
+{#                                    <td>{{ grupo.domingo }}</td>#}
+
                                     <td><a class="btn btn-info btn-xs" href="/escuela/grupos/{{ grupo.id }}/update">Editar </a>
                                         <a button class="btn btn-danger btn-xs" data-toggle="modal"
                                            data-target="#eliminar-modal" onclick="formEliminar({{grupo.id}})">Eliminar</a></td>
@@ -75,7 +92,7 @@
                     <h4 class="modal-title" id="myModalLabel2">Confirmación</h4>
                 </div>
                 <div class="modal-body">
-                    <h4>Esta seguro que desea eliminar esta Clase?</h4>
+                    <h4>Esta seguro que desea eliminar este Grupo?</h4>
 
                 </div>
                 <div class="modal-footer">
