--- a/src/main/templates/forms/charfield.html
+++ b/src/main/templates/forms/charfield.html
@@ -1,2 +1,2 @@
 <input type="text" id="{{ field.id_for_label }}" required="required" name="{{ field.html_name }}"
-       {% if field.value %}value="{{ field.value }}"{% endif %} class="form-control col-md-7 col-xs-12 {{ field.field.attrs }}">
+       {% if field.value %}value="{{ field.value }}"{% endif %} class="form-control {{ field.field.attrs }}">
