--- a/src/main/templates/forms/datefield.html
+++ b/src/main/templates/forms/datefield.html
@@ -1,6 +1,6 @@
 
 <input type="text" data-inputmask="'mask': '99/99/9999'" id="{{ field.id_for_label }}" required="required" name="{{ field.html_name }}"
-       {% if field.value %}value="{{ field.value }}"{% endif %} class="form-control col-md-7 col-xs-12">
+       {% if field.value %}value="{{ field.value }}"{% endif %} class="form-control">
 {% if field.errors %}
     <ul class="parsley-errors-list" id="parsley-id-5">
         {% for error in field.errors %}
