--- a/src/main/templates/sidebar.html
+++ b/src/main/templates/sidebar.html
@@ -80,7 +80,7 @@
                 <li><a><img src="/static/img/inventario_blanco.png" width="29px" style="margin: 0.3em 0.6em 0.6em 0.6em">
                     Compras <span class="fa fa-chevron-down"></span></a>
                     <ul class="nav child_menu">
-                        <li><a href="#">Nueva Compra</a></li>
+                        <li><a href="/tienda/compras/new">Nueva Compra</a></li>
                         <li><a href="#">Consulta de compras</a></li>
                         <li><a href="/tienda/categoria_productos">Mantenimiento de Categoria</a></li>
                         <li><a href="/tienda/categoria_productos/new">Categorias de productos</a></li>
