Agrega CRUD de Clientes

--- a/src/main/templates/sidebar.html
+++ b/src/main/templates/sidebar.html
@@ -71,6 +71,7 @@
                 <li><a><img src="/static/img/indumentaria_blanco.png" width="29px" style="margin: 0.3em 0.6em 0.6em 0.6em">
                     Ventas <span class="fa fa-chevron-down"></span></a>
                     <ul class="nav child_menu">
+                        <li><a href="/tienda/clientes/new">Nuevo Cliente</a></li>
                         <li><a href="/tienda/ventas/new">Nueva Venta</a></li>
                         <li><a href="#">Mantenimiento de Ventas</a></li>
                         <li><a href="/tienda/facturas">Mantenimiento de Facturas</a></li>
@@ -81,7 +82,7 @@
                     Compras <span class="fa fa-chevron-down"></span></a>
                     <ul class="nav child_menu">
                         <li><a href="/tienda/compras/new">Nueva Compra</a></li>
-                        <li><a href="#">Consulta de compras</a></li>
+                        <li><a href="/tienda/compras">Consulta de compras</a></li>
                         <li><a href="/tienda/categoria_productos">Mantenimiento de Categoria</a></li>
                         <li><a href="/tienda/categoria_productos/new">Categorias de productos</a></li>
                         <li><a href="/tienda/productos">Mantenimiento de Productos</a></li>
