--- a/src/main/templates/base.html
+++ b/src/main/templates/base.html
@@ -92,6 +92,7 @@
                 <script src="/static/vendors/jQuery-Smart-Wizard/js/jquery.smartWizard.js"></script>
                 <!-- Bootstrap -->
                 <script src="/static/vendors/bootstrap/dist/js/bootstrap.min.js"></script>
+                <script src="/static/vendors/vue/vue.min.js"></script>
                 <!-- FastClick -->
                 <!-- <script src="/static/vendors/fastclick/lib/fastclick.js"></script> -->
                 <!-- NProgress -->
