--- a/src/escuela/templates/asistencias-form.html
+++ b/src/escuela/templates/asistencias-form.html
@@ -15,11 +15,11 @@
                         <div class="form-group">
                             <div class="col-md-offset-2 col-md-4 col-sm-6 col-xs-12">
                                 <label for="fecha">Fecha</label>
-                                <input id="fecha" v-datepicker="dia" data-inputmask="'mask': '99/99/9999'" class="form-control" type="text">
+                                <input id="fecha" v-datepicker="dia" v-model="dia" data-inputmask="'mask': '99/99/9999'" class="form-control" type="text">
                             </div>
 
                             <div class="col-md-4 col-sm-6 col-xs-12">
-                                <label for="grupo">Grupo [[grupo]]</label>
+                                <label for="grupo">Grupo</label>
                                 <select v-model="grupo" name="grupo" data-allow-clear="true" data-placeholder="Todos los Grupos" required="" id="id_grupo"
                                         data-autocomplete-light-url="/escuela/grupo-autocomplete-asistencia/"
                                         data-autocomplete-light-function="select2" tabindex="-1"
@@ -30,32 +30,34 @@
                         </div>
                     </form>
                     <br>
-                    [[alumnos]]
-                    <table>
-                    <tr v-for="alumno in alumnos">
-                            <td>[[alumno.nombre]]</td>
-                            <td>[[alumno.grupo]]</td>
-                            <td><span style="display: none">[[alumno.asistencia]]</span><input v-icheck="alumno.asistencia" v-model="alumno.asistencia" type="checkbox"></td>
-                        </tr>
-                        </table>
-                    <table id="datatable-responsive" class="table table-striped table-bordered dt-responsive nowrap"
+                    <table class="table table-striped table-bordered dt-responsive nowrap"
                            cellspacing="0"
                            width="100%">
                         <thead>
                         <tr>
                             <th >Alumno</th>
                             <th >Grupo</th>
-                            <th >Asiste</th>
+                            <th >Comentario</th>
+                            <th >Asistencia</th>
                         </tr>
                         </thead>
                         <tbody>
                         <tr v-for="alumno in alumnos">
                             <td>[[alumno.nombre]]</td>
-                            <td>[[alumno.grupo]]</td>
-                            <td><span style="display: none">[[alumno.asistencia]]</span><input v-icheck="alumno.asistencia" v-model="alumno.asistencia" type="checkbox"></td>
+                            <td>[[alumno.grupo.nombre]]</td>
+                            <td class="no-padding"><input class="form-control no-margin" type="text" v-model="alumno.asistencia_comentario"></td>
+                            <td><span style="display: none">[[alumno.asistencia]]</span><input v-icheck="alumno.asistencia_presente" v-model="alumno.asistencia_presente" type="checkbox"></td>
                         </tr>
                         </tbody>
                     </table>
+
+                    <div class="ln_solid"></div>
+                    <div class="form-group">
+                        <div class="col-md-6 col-sm-6 col-xs-12 col-md-offset-3">
+                            <a class="btn btn-primary" type="button" href="/">Cancelar</a>
+                            <div v-on:click="actualizarAsistencia()" class="btn btn-success">Guardar</div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
