--- a/src/main/templates/sidebar.html
+++ b/src/main/templates/sidebar.html
@@ -63,6 +63,7 @@
                     Ventas <span class="fa fa-chevron-down"></span></a>
                     <ul class="nav child_menu">
                         <li><a href="/tienda/clientes/new">Nuevo Cliente</a></li>
+                         <li><a href="/tienda/clientes">Mantenimiento de Clientes</a></li>
                         <li><a href="/tienda/ventas/new">Nueva Venta</a></li>
                         <li><a href="#">Mantenimiento de Ventas</a></li>
                         <li><a href="/tienda/facturas">Mantenimiento de Facturas</a></li>
@@ -74,8 +75,8 @@
                     <ul class="nav child_menu">
                         <li><a href="/tienda/compras/new">Nueva Compra</a></li>
                         <li><a href="/tienda/compras">Consulta de compras</a></li>
-                        <li><a href="/tienda/categoria_productos">Mantenimiento de Categoria</a></li>
-                        <li><a href="/tienda/categoria_productos/new">Categorias de productos</a></li>
+{#                        <li><a href="/tienda/categoria_productos">Mantenimiento de Categoria</a></li>#}
+{#                        <li><a href="/tienda/categoria_productos/new">Categorias de productos</a></li>#}
                         <li><a href="/tienda/productos">Mantenimiento de Productos</a></li>
                         <li><a href="/tienda/productos/new">Existencia de productos</a></li>
 
