--- a/src/tienda/templates/clientes.html
+++ b/src/tienda/templates/clientes.html
@@ -32,10 +32,10 @@
                             <thead>
 
                             <tr>
-                                <th>nombre_razon</th>
-                                <th>ruc_cliente</th>
-                                <th>direccion</th>
-                                <th>telefono</th>
+                                <th>Nombre Razón</th>
+                                <th>RUC</th>
+                                <th>Dirección</th>
+                                <th>Teléfono</th>
                                 <th>Acción</th>
                             </tr>
                             </thead>
