--- a/src/tienda/templates/producto.html
+++ b/src/tienda/templates/producto.html
@@ -33,16 +33,16 @@
                             <thead>
                             <tr>
 
-                                <th>codigo</th>
-                                <th>nombre</th>
-                                <th>descripcion</th>
-                                <th>categoria</th>
-                                <th>precio_venta</th>
-                                <th>costo</th>
-                                <th>iva</th>
-                                <th>estado</th>
-                                <th>existencia</th>
-                                <th>foto_producto</th>
+                                <th>Codigo</th>
+                                <th>Nombre</th>
+                                <th>Descripcion</th>
+
+                                <th>Precio venta</th>
+                                <th>Costo</th>
+                                <th>Iva</th>
+                                <th>Estado</th>
+                                <th>Existencia</th>
+                                <th>Foto</th>
 
                                 <th>Accion</th>
                             </tr>
@@ -54,7 +54,7 @@
                                     <td>{{ producto.codigo }}</td>
                                     <td>{{ producto.nombre}}</td>
                                     <td>{{ producto.descripcion}}</td>
-                                    <td>{{ producto.categoria }}</td>
+
                                     <td>{{ producto.precio_venta }}</td>
                                     <td>{{ producto.costo }}</td>
                                     <td>{{ producto.iva }}</td>
