--- a/src/tienda/templates/producto-form.html
+++ b/src/tienda/templates/producto-form.html
@@ -30,4 +30,26 @@
         </div>
     </div>
 {% endblock %}
+{% block javascripts %}
+    {{ block.super }}
+    <script>
+
+
+        function configurarICheck(element) {
+            element.parents('ul').attr('style', 'list-style-type: none;padding:0');
+            element.iCheck({
+                checkboxClass: 'icheckbox_flat-green',
+                radioClass: 'iradio_flat-green'
+            });
+        }
+        $(document).ready(function () {
+            configurarICheck($("[name=iva]"));
+            configurarICheck($("[name=estado]"));
+            configurarICheck($("[name=control_stock]"));
+
+        });
+
+
+    </script>
+{% endblock %}
 
